crates/bitnet-kernels/tests/snapshots/snapshot_wave26_kernels__w26_quant_bits_all.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave26_kernels.rs
expression: bits
---
[
    Int2,
    Int4,
]
