crates/bitnet-kernels/tests/snapshots/snapshot_wave26_kernels__w26_scale_mode_all.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave26_kernels.rs
expression: modes
---
[
    Uniform,
    PerBlock,
    PerChannel,
]
