crates/bitnet-kernels/tests/snapshots/snapshot_wave26_kernels__w26_schedule_strategy_all.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave26_kernels.rs
expression: strategies
---
[
    RoundRobin,
    LeastLoaded,
    PriorityBased,
]
