crates/bitnet-kernels/tests/snapshots/snapshot_wave26_kernels__w26_sliding_window_config_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave26_kernels.rs
expression: cfg
---
SlidingWindowConfig {
    seq_len: 1024,
    window_size: 128,
    threads_per_block: 256,
}
