crates/bitnet-kernels/tests/snapshots/snapshot_wave26_kernels__w26_stream_config_default.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave26_kernels.rs
expression: cfg
---
StreamConfig {
    num_streams: 4,
    priority: Normal,
    default_stream_behavior: PerThread,
    enable_profiling: false,
}
