crates/bitnet-kernels/tests/snapshots/snapshot_wave26_kernels__w26_stream_config_high_perf.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave26_kernels.rs
expression: cfg
---
StreamConfig {
    num_streams: 16,
    priority: High,
    default_stream_behavior: Legacy,
    enable_profiling: true,
}
