crates/bitnet-kernels/tests/snapshots/snapshot_wave26_kernels__w26_stream_priority_all.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave26_kernels.rs
expression: priorities
---
[
    Low,
    Normal,
    High,
]
